# grandma-gcn

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  compose.yml  compose_prod.yml  compose_test.yml  dockerfile  gunicorn_conf.py  production_doc.md  pyproject.toml
.github/workflows/: pre-commit.yml  tests.yml
scripts/: entrypoint.sh  init_grandma_gcn_db.sql
src/alembic_migration/: env.py
src/alembic_migration/versions/: 44b49190c297_init.py  682e0124e66b_add_grb_alerts_table_with_proper_columns.py  79b89c014192_migration_1.py  a812e32a489d_add_unique_constraint_on_message_ts_and_.py  c9dd00d9719c_initial.py
src/grandma_gcn/: __init__.py  parse_swift_html.py
src/grandma_gcn/database/: base.py  grb_db.py  gw_db.py  init_db.py  session.py
src/grandma_gcn/flask_listener/: app_factory.py  slack_listener.py
src/grandma_gcn/gcn_stream/: automatic_gwemopt.py  consumer.py  gcn_logging.py  grb_alert.py  gw_alert.py  stream.py
src/grandma_gcn/slackbot/: element_extension.py  grb_message.py  gw_message.py
src/grandma_gcn/worker/: celery_app.py  gwemopt_init.py  gwemopt_launcher.py  gwemopt_worker.py  owncloud_client.py  swift_html_worker.py
tests/: conftest.py  gcn_stream_test.toml  test_app_factory.py  test_ascii_table.py  test_consumer.py  test_database.py  test_e2e.py  test_gcn_stream.py  test_grb_alert.py  test_grb_consumer.py  test_grb_database.py  test_grb_message.py  test_gw_alert.py  test_gw_alert_dbmodel.py  test_gw_message.py  test_gwemopt_post_task.py  test_gwemopt_task.py  test_handle_actions.py  test_owncloud_client.py  test_verify_slack_request.py
tests/data/: tiles.pickle
tests/notice_examples/: S241102br-initial.json  S241102br-preliminary.json  S241102br-update.json  S250207bg-preliminary.json  S250720j-preliminary.json  S250910b-earlywarning.json  gw_notice_significant.json  gw_notice_unsignificant.json  retraction.json  svom_eclairs.xml  svom_mxt.xml  swift_bat_type61.xml  swift_uvot_type81.xml  swift_xrt_type67.xml
