[project]
name = "grandma-gcn"
version = "6.0.0"
description = "Automated ingestion, analysis, and distribution of gravitational wave (GW) alerts for the GRANDMA collaboration. Provides real-time GCN alert processing, observation strategy generation (gwemopt), Slack and OwnCloud integration, and Celery-based automation."
authors = [{ name = "Roman", email = "roman.lemontagner@gmail.com" }]
dependencies = [
    "gcn-kafka>=0.3.3",
    "tomli>=2.0.2",
    "pytz>=2025.2",
    "slack-sdk>=3.35.0",
    "fink-utils>=0.41.0",
    "typing-extensions>=4.13.2",
    "astropy>=7.0.2",
    "astropy-healpix>=1.1.2",
    "celery[redis]>=5.5.2",
    "dotenv>=0.9.9",
    "gwemopt @ git+https://github.com/FusRoman/old_gwemopt@v1.2.0",
    "ligo-skymap>=2.4.0",
    "yarl>=1.20.0",
    "spherical-geometry>=1.3.3",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "CeCILL-C" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[project.optional-dependencies]
test = ["pytest>=8.3.3", "pytest-mock>=3.14.0", "pytest-cov>=6.1.1"]

lint = ["black>=24.10.0", "pre-commit>=4.0.1", "pylint>=3.3.2"]

[tool.black]
target-version = ['py312']
include = '\.pyi?$'

[tool.pylint]
disable = "all"
enable = [
    "redefined-builtin",
    "unreachable",
    "duplicate-key",
    "unnecessary-semicolon",
    "global-variable-not-assigned",
    "unused-variable",
    "binary-op-exception",
    "bad-format-string",
    "anomalous-backslash-in-string",
    "bad-open-mode",
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E701", "E501"]
exclude = [".git", "__pycache__", "build", "dist", "*.egg-info"]
max-complexity = 10

[tool.pytest.ini_options]
markers = [
    "e2e: run tests that need the app_test and the db_test (deselect with '-m \"not e2e\"')",
]

[tool.pdm.scripts]
test = 'pytest -m "not e2e" --cov=grandma_gcn --cov-report=xml'
